<resources>
    <string name="app_name">Volunteer</string>
    <string name="l_reg">Регистрация</string>
    <string name="l_Email">Email</string>
    <string name="l_password">Пароль</string>
    <string name="l_re_password">Повторите пароль</string>
    <string name="l_login">Войти</string>
    <string name="l_next">Далее</string>
    <string name="l_SecName">Фамилия</string>
    <string name="l_Name">Имя</string>
    <string name="l_MidName">Отчество</string>
    <string name="l_phone">Телефон</string>
    <string name="l_Size_of_clother">Размер одежды</string>
    <string name="l_more_inf">Доп иформация</string>
    <string name="l_reg_in">Зарегистрироваться</string>
    <string name="title_activity_main">Мероприятия</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Создатель</string>
    <string name="add_event">Добавить мероприятие</string>
    <string name="Ivanov">Иванов</string>
    <string name="Ivan">Иван</string>
    <string name="Avatar">avatar</string>
    <string name="_100">100</string>
    <string name="_999">999</string>
    <string name="_dot">.</string>
</resources>
