<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformation">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiSecName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/tSecName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/l_SecName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/tName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/l_Name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiMidName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/tMidName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/l_MidName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">


                <EditText
                    android:id="@+id/tPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/l_phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiSiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/tSiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/l_Size_of_clother"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/tInfo"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/l_more_inf"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buRegIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/l_reg_in" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>